# mercari-mcp

./: .gitignore  README.md  pyproject.toml  requirements.txt
scripts/: run_server.py  run_sse_server.py
src/mercari_mcp/: __init__.py  mercapi_client.py  server.py  sse_server.py
